force-app/main/default/objects/Case/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <description>Unique identifier for the contacted Channel. This could be UCID or Avaya Id for Voice calls, MMT Chat Interaction Id for Chat or Kana Message Id for emails. Case origin and Channel Id will uniquely identify the Salesforce case associated to the contacted channel.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the contacted channel or selected Case Origin.</inlineHelpText>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>