force-app/main/default/objects/Case/fields/Compass_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Compass_Case_Id__c</fullName>
    <description>CS Compass Case Id for the current interaction.</description>
    <inlineHelpText>CS Compass Case Id for the current interaction.</inlineHelpText>
    <label>Compass Case Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>