force-app/main/default/objects/Case/fields/Contact_Intent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Intent__c</fullName>
    <description>Field is populated by API call to OCP for Contact Intent</description>
    <label>Contact Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>