force-app/main/default/objects/Case/fields/Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Reason__c</fullName>
    <description>Contact reason for the current Interaction. This contact tracking can be automatic or manual depending on what business prefers.</description>
    <inlineHelpText>Contact reason for the current Interaction</inlineHelpText>
    <label>Contact Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>