force-app/main/default/objects/Case/fields/CS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CS_Case_Number__c</fullName>
    <description>Case Number pre-fixed with CS- which can be shared with other case systems or clients or displayed to teammates. Similar to I-Case in CS Compass. The CS- prefix will help to easily identify this as Customer Service case.</description>
    <formula>&quot;CS-&quot; &amp; CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Service Case Number</inlineHelpText>
    <label>CS Case Number</label>
    <type>Text</type>
</CustomField>