force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Populated by API call to OCP with the root cause of the contact</description>
    <label>Root Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>