force-app/main/default/objects/Case/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>Tenant name in the multi-tenant environment. PayPal will be the first tenant, but soon we will be adding more tenants like Venmo, Xoom, iZettle and so on.</description>
    <inlineHelpText>Tenant Name</inlineHelpText>
    <label>Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tenant</valueSetName>
    </valueSet>
</CustomField>